--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -9,6 +9,8 @@
     android:orientation="vertical"
     android:id="@+id/detailsLayout">
 
+    <include layout="@layout/my_toolbar"/>
+
     <ImageView
         android:id="@+id/poster"
         android:layout_width="match_parent"
@@ -16,29 +18,51 @@
         android:layout_weight="70"
         />
 
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/movieTitle"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="test"
+            android:textColor="#000"
+            android:textSize="24sp"
+            android:layout_marginLeft="3dp"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/FAButton"
+            android:elevation="6dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/movieTitle"
+
+            android:src="@drawable/watchlist" />
+    </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/watchlist_btn"
+            android:id="@+id/rate_btn"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:text="Add to watchlist" />
+            android:text="Rate" />
 
-        <TextView
-            android:id="@+id/movieTitle"
+        <NumberPicker
+            android:id="@+id/number_picker"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginRight="15dp"
-            android:textColor="#000"
-            android:textSize="24sp"
-            android:layout_toRightOf="@id/watchlist_btn"/>
+            android:layout_height="54dp"
+            android:layout_toRightOf="@id/rate_btn">
+
+        </NumberPicker>
 
     </RelativeLayout>
 
@@ -53,4 +77,5 @@
         android:scrollbars="vertical"
         android:maxLines="6"
         />
+
 </LinearLayout>
