--- a/app/src/main/res/layout/activity_watch_list_display.xml
+++ b/app/src/main/res/layout/activity_watch_list_display.xml
@@ -7,6 +7,8 @@
     tools:context=".WatchListDisplay"
     android:orientation="vertical">
 
+    <include layout="@layout/my_toolbar"/>
+
     <TextView
         android:id="@+id/watchlist_textView"
         android:layout_width="match_parent"
