--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MovieDetails"
-    android:weightSum="100"
     android:orientation="vertical"
     android:id="@+id/detailsLayout">
 
@@ -14,8 +13,8 @@
     <ImageView
         android:id="@+id/poster"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="70"
+        android:layout_height="258dp"
+
         />
 
 
