Added Butterknife for MovieRatingsDisplay, WatchListDisplay activities

--- a/app/src/main/res/layout/activity_watch_list_display.xml
+++ b/app/src/main/res/layout/activity_watch_list_display.xml
@@ -7,7 +7,9 @@
     tools:context=".WatchListDisplay"
     android:orientation="vertical">
 
-    <include layout="@layout/my_toolbar"/>
+    <include
+        android:id="@+id/watch_list_toolbar"
+        layout="@layout/my_toolbar"/>
 
     <TextView
         android:id="@+id/watchlist_textView"
