Added toolbar navigation button to replace having multiple toolbar icons

--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -2,23 +2,38 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_search"
-        android:icon="@drawable/search"
-        android:title="action_search"
-        app:showAsAction="always"
-        />
+        android:id="@+id/action_drop_down"
+        android:icon="@drawable/baseline_more_vert_black_48dp"
+        android:title=""
+        app:showAsAction="always">
+        <menu>
+            <item
+                android:id="@+id/action_search"
+                android:icon="@drawable/search"
+                android:title="Search"
+                app:showAsAction="ifRoom"
+                />
 
-    <item
-        android:id="@+id/action_discover"
-        android:icon="@drawable/discover"
-        android:title="action_discover"
-        app:showAsAction="always"
-        />
+            <item
+                android:id="@+id/action_discover"
+                android:icon="@drawable/discover"
+                android:title="Discover"
+                app:showAsAction="ifRoom"
+                />
 
-    <item
-        android:id="@+id/action_watchlist"
-        android:icon="@drawable/watchlist"
-        android:title="action_watchlist"
-        app:showAsAction="always"
-        />
+            <item
+                android:id="@+id/action_watchlist"
+                android:icon="@drawable/watchlist"
+                android:title="Watchlist"
+                app:showAsAction="ifRoom"
+                />
+
+            <item
+                android:id="@+id/action_ratings"
+                android:icon="@drawable/rate"
+                android:title="Ratings"
+                app:showAsAction="ifRoom"
+                />
+        </menu>
+    </item>
 </menu>
